<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.metsci.ext.com.github.bsideup.jabel</groupId>
    <artifactId>jabel-javac-plugin</artifactId>
    <version>0.4.4-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Subnode Core</name>
    <description>Core algorithms to generate Farthest-on-Region geometries</description>

    <dependencies>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>1.11.21</version>
        </dependency>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy-agent</artifactId>
            <version>1.11.21</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.9.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.olivergondza</groupId>
            <artifactId>maven-jdk-tools-wrapper</artifactId>
            <version>0.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <compilerArg>--add-exports</compilerArg><compilerArg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports</compilerArg><compilerArg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports</compilerArg><compilerArg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</compilerArg>
                        <compilerArg>--add-exports</compilerArg><compilerArg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Shade Glimpse so we don't conflict with TRK's Glimpse -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <relocations combine.children="append">
                        <relocation>
                            <pattern>net.bytebuddy</pattern>
                            <shadedPattern>
                                jabel.shaded.net.bytebuddy
                            </shadedPattern>
                            <includes>
                                <include>net.bytebuddy.**</include>
                            </includes>
                        </relocation>
                    </relocations>
                    <artifactSet>
                        <includes>
                            <include>net.bytebuddy:*</include>
                        </includes>
                    </artifactSet>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>



</project>
